# dyros-lab-bootcamp

./: README.md
1day/1day/dyros_cmake/: CMakeLists.txt  package.xml
1day/1day/dyros_cmake/include/dyros_cmake/: dyros_cpp_custom_pub.h  dyros_cpp_custom_sub.h  dyros_cpp_pub.h  dyros_cpp_sub.h
1day/1day/dyros_cmake/launch/: dyros_cpp_launch.py  dyros_cpp_launch.xml
1day/1day/dyros_cmake/src/: dyros_cpp_client.cpp  dyros_cpp_custom_pub.cpp  dyros_cpp_custom_sub.cpp  dyros_cpp_pub.cpp  dyros_cpp_server.cpp
1day/1day/dyros_interface/: CMakeLists.txt  package.xml
1day/1day/dyros_python/: package.xml  setup.py
1day/1day/dyros_python/dyros_python/: dyros_py_client.py  dyros_py_custom_pub.py  dyros_py_custom_sub.py  dyros_py_param.py  dyros_py_pub.py  dyros_py_server.py  dyros_py_sub.py
1day/1day/tutorial/: CMakeLists.txt
1day/1day/tutorial/src/: tutorial.cpp
1day/1day/tutorial/src/my_math/: mysqrt.cpp
4day/4day/: fr3_free_interface.py  multi_thread_interface.py
4day/4day/franka_description/robots/: panda_arm.ros2_control.xacro  panda_arm.xacro  panda_arm_hand.urdf.xacro
4day/4day/moveit_api_tutorial/: CMakeLists.txt  Notice.md  package.xml
4day/4day/moveit_api_tutorial/src/: moveit_cpp_interface.cpp
4day/4day/moveit_sim_interface/: CMakeLists.txt  Notice.md  package.xml
4day/4day/moveit_sim_interface/include/: moveit_controller.hpp
4day/4day/moveit_sim_interface/src/: main.cpp  moveit_controller.cpp
4day/4day/panda_moveit_config/: .setup_assistant  package.xml
4day/4day/panda_moveit_config/config/: moveit_controllers.yaml  panda.srdf  panda.urdf.xacro  ros2_controllers.yaml  sensors_3d.yaml
4day/4day/panda_moveit_config/launch/: interface_demo.launch.py
